// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<button
  className="sc-AxjAm sc-AxirZ hjexjw"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  className="sc-AxjAm sc-AxirZ bswUQD"
>
  foo
</button>
`;
